
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JAN 17b
  * in model/chem/_NH3_Plasma_10s/rodriguez2023.c
    - deleted find_Te_from_EoverN_NH3() and find_EoverN_from_Te_NH3()
    - now calls _EoverN_from_rhok_Te() to find Estar 
  * in model/thermo/_generic/electronimpact.c
    - changed the parameters in _EoverN_from_rhok_Te() and _Te_from_Nk_EoverN() so that N is replaced
      by rhok
    

2024 JAN 17a
  * in model/chem/_NH3_Plasma_10s/doc/rodriguez2023.tex
    - improved the documentation
  * in model/fluid/_Navier-Stokes_plasma/fluid.c and model/fluid/_Navier-Stokes_plasma/fluid_plasma.c
    - renamed TEMODEL_TRANSPORT to TEMODEL_TRANSPORTQENQEI
    - added TEMODEL_TRANSPORTQE
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - added Qe to post variables
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added find_Qe() and find_dSe_dU_transport_Qe()
    - in find_Se() and find_dSchem_dU() and find_dSe_dU() renamed TEMODEL_TRANSPORT to 
      TEMODEL_TRANSPORTQENQEI and added TEMODEL_TRANSPORTQE
  * in model/thermo/_generic/
    - added electronimpact.c 
    - added electronimpact.h
  

2023 DEC 30a
  * in model/transport/_Gupta-Yos/transport.c
    - changed the numbering of  LNLAMBDA_* and TRANSPORTMODEL_* from 1,2,3,.. to 101,102,103,..
  * in src/test.c
    - made various changes to the way the options are dealt with so that the control file now
      needs to be read when finding transport coefficients (needed because the type of 
      transport model is specified in the control file)
    

2023 DEC 28b
  * in model/fluid/_Favre-Reynolds_plasma/fluid_source.c
    - in _tauvt() and find_dSvib_dU() for N2VIBMODEL_TEQUILIBRIUM, changed the source term 
      to N2VIB_EQUILIBRIUM_CONSTANT/_rho(np)